# aws_test_proj1

./: .gitignore  PROJECT_PLAN.md  app.py  config.py  pyproject.toml  req.txt  tasks.sql
lambdas/process_task_results_lambda/: runner.py
lambdas/process_tasks_lambda/: runner.py
